# PYTHON_LEARNING

./: .gitignore
0-lesson/: 0.py  1.py  2.py  requirements.txt
1-strings/: .gitignore  index.html  script.py
10-buffers/: 1-os.py  2-os.py  script.py
11-loops/: .md  script.py
12-fn/: script.py
13-recursion/: script.py
14-scope/: script.py
15-closures/: script.py
15-closures/game/: game.py  lib.py  t.py
16-f_strings/: script.py
18-cmd_line_ags/: script.py
19-lambda/: script.py
2-bools/: script.py
20-classes/: requirements.txt
20-classes/src/: script.py
21-errors/: pyproject.toml
21-errors/src/: script.py
22-OOP/: gen_toml.py  pyproject.toml
22-OOP/src/: script.py  time_ex.py
23-venv/: pyproject.toml
23-venv/src/: script.py
24-files/: pyproject.toml
5-cmplx/: requirements.txt
6-fn_nums/: script.py
7-inputs/: game.py  reg.py  script.py
8-lists-tuples/: .md  0-list.py  1-list.py  2-list.py  3-list.py  4-list.py  5-tuple.py  6-tuple.py  requirements.txt  script.py
9-dicts-sets/: 1-dicts.py  2-set.py  script.py
test/: pyproject.toml
